--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -2,4 +2,12 @@
 <resources>
     <dimen name="splash_name_size">35sp</dimen>
     <dimen name="splash_pic_size">300dp</dimen>
+
+    <dimen name="activity_help_main_padding">64dp</dimen>
+    <dimen name="activity_help_main_padding_land">64dp</dimen>
+    <dimen name="activity_help_pic_size">130dp</dimen>
+    <dimen name="activity_help_version_size">20sp</dimen>
+    <dimen name="activity_help_name_size">35sp</dimen>
+    <dimen name="activity_help_main_size">25sp</dimen>
+    <dimen name="activity_help_name_size_land">20sp</dimen>
 </resources>
