EyeShield - Push 3 -  Design Improvements - Filter killing fixed - Landscape supported

--- a/app/src/main/res/layout/activity_animation.xml
+++ b/app/src/main/res/layout/activity_animation.xml
@@ -7,27 +7,23 @@
     android:orientation="vertical"
     tools:context="com.mmalvandi.serviceone.activities.AnimationActivity">
 
+    <!--Hide toolbar-->
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
-    <FrameLayout
+    <ViewFlipper
+        android:id="@+id/startFlipper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ViewFlipper
-            android:id="@+id/startFlipper"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <include layout="@layout/flipper_animation_1" />
 
-            <include layout="@layout/flipper_animation_1" />
+        <include layout="@layout/flipper_animation_2" />
 
-            <include layout="@layout/flipper_animation_2" />
+        <include layout="@layout/flipper_animation_3" />
 
-            <include layout="@layout/flipper_animation_3" />
-
-            <include layout="@layout/flipper_animation_4" />
-        </ViewFlipper>
-    </FrameLayout>
+        <include layout="@layout/flipper_animation_4" />
+    </ViewFlipper>
 </LinearLayout>
