--- a/app/src/main/res/layout/flipper_animation_1.xml
+++ b/app/src/main/res/layout/flipper_animation_1.xml
@@ -1,44 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- File created by SkillsOn -->
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#32858585">
 
     <!--Anim as bg-->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/gradientAnim"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:scaleType="centerCrop"/>
 
-    <TextView
-        android:id="@+id/textView1"
+    <!--Content main-->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_margin="16dp"
-        android:textStyle="bold"
-        android:text="@string/flipper_1_text"
-        android:textSize="20sp"
-        android:textColor="#FFF"
-        android:layout_centerInParent="true"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/next1"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        app:lottie_fileName="next.json"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        android:padding="8dp"
-        android:background="@drawable/shape_flippers_next_button"
-        android:layout_marginRight="@dimen/animation_button_margin2"
-        android:layout_marginBottom="@dimen/animation_button_margin"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:padding="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:layout_marginLeft="@dimen/_26sdp"
+            android:layout_marginRight="@dimen/_26sdp"
+            android:textStyle="bold"
+            android:text="@string/flipper_1_text"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="#FFF"
+            android:layout_weight="8.8"
+            android:gravity="center"/>
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/next1"
+            android:layout_width="@dimen/_90sdp"
+            android:layout_height="0dp"
+            app:lottie_fileName="next.json"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            android:padding="8dp"
+            android:background="@drawable/shape_flippers_next_button"
+            android:layout_marginRight="@dimen/animation_button_margin2"
+            android:layout_marginBottom="@dimen/animation_button_margin"
+            android:layout_weight="1.2"
+            android:layout_gravity="right"/>
+
+    </LinearLayout>
+</FrameLayout>
