--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -3,147 +3,167 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="@dimen/_32sdp"
     android:background="@drawable/bg2_blur">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="#303030"
         android:orientation="vertical"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Filter Settings"
-            android:textColor="#f1f2f3"
-            android:textSize="18sp"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/colorPrimary"
-            />
-
-        <RelativeLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_marginTop="16dp"
-            >
-
-            <TextView
-                android:id="@+id/alphaLabel"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:padding="5dp"
-                android:text="Alpha"
-                android:textColor="#fff1f2f3"
-                />
-
-            <SeekBar
-                android:id="@+id/alphaControl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/alphaLabel"
-                android:max="255"/>
-
-            <TextView
-                android:id="@+id/redLabel"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/alphaControl"
-                android:padding="5dp"
-                android:text="Red"
-                android:textColor="#f1f2f3"
-                />
-
-            <SeekBar
-                android:id="@+id/redControl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/alphaControl"
-                android:layout_toRightOf="@+id/redLabel"
-                android:max="255"/>
-
-            <TextView
-                android:id="@+id/greenLabel"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/redControl"
-                android:padding="5dp"
-                android:text="Green"
-                android:textColor="#f1f2f3"
-                />
-
-            <SeekBar
-                android:id="@+id/greenControl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/redControl"
-                android:layout_toRightOf="@+id/greenLabel"
-                android:max="255"/>
-
-            <TextView
-                android:id="@+id/blueLabel"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/greenControl"
-                android:padding="5dp"
-                android:text="Blue"
-                android:textColor="#f1f2f3"
-                />
-
-            <SeekBar
-                android:id="@+id/blueControl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/greenControl"
-                android:layout_toRightOf="@+id/blueLabel"
-                android:max="255"/>
-
-        </RelativeLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        >
+        android:layout_alignParentStart="true">
 
-        <Button
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/layout1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="cancelClick"
-            android:text="Remove Filter"
-            android:textAllCaps="false"
-            />
+            android:background="#303030"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="0dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="Filter Settings"
+                android:textColor="#f1f2f3"
+                android:textSize="18sp"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/colorPrimary"
+                />
+
+            <RelativeLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_marginTop="@dimen/_16sdp"
+                android:layout_marginBottom="@dimen/_20sdp">
+
+                <TextView
+                    android:id="@+id/alphaLabel"
+                    android:layout_width="@dimen/activity_filter_name"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:padding="5dp"
+                    android:text="Alpha"
+                    android:textColor="#fff1f2f3"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"/>
+
+                <SeekBar
+                    android:id="@+id/alphaControl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/alphaLabel"
+                    android:max="255"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"/>
+
+                <TextView
+                    android:id="@+id/redLabel"
+                    android:layout_width="@dimen/activity_filter_name"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/alphaControl"
+                    android:padding="5dp"
+                    android:text="Red"
+                    android:textColor="#f1f2f3"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"/>
+
+                <SeekBar
+                    android:id="@+id/redControl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/alphaControl"
+                    android:layout_toRightOf="@+id/redLabel"
+                    android:max="255"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"/>
+
+                <TextView
+                    android:id="@+id/greenLabel"
+                    android:layout_width="@dimen/activity_filter_name"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/redControl"
+                    android:padding="5dp"
+                    android:text="Green"
+                    android:textColor="#f1f2f3"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"/>
+
+                <SeekBar
+                    android:id="@+id/greenControl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/redControl"
+                    android:layout_toRightOf="@+id/greenLabel"
+                    android:max="255"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"/>
+
+                <TextView
+                    android:id="@+id/blueLabel"
+                    android:layout_width="@dimen/activity_filter_name"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/greenControl"
+                    android:padding="5dp"
+                    android:text="Blue"
+                    android:textColor="#f1f2f3"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"/>
+
+                <SeekBar
+                    android:id="@+id/blueControl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/greenControl"
+                    android:layout_toRightOf="@+id/blueLabel"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:max="255"/>
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/buttons"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="applyClick"
-            android:text="Apply Filter"
-            android:textAllCaps="false"/>
+            android:background="#303030"
+            android:layout_marginTop="0dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="cancelClick"
+                android:text="Remove Filter"
+                android:textAllCaps="false"
+                android:layout_margin="@dimen/_10sdp"/>
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="applyClick"
+                android:text="Apply Filter"
+                android:textAllCaps="false"
+                android:layout_margin="@dimen/_10sdp"/>
+
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
