--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,6 +25,7 @@
             android:textColor="#FFF"
             android:gravity="center"
             android:textSize="21sp"
+            android:layout_marginRight="72dp"
             android:textStyle="bold"/>
     </android.support.v7.widget.Toolbar>
 
