--- a/app/src/main/res/layout/flipper_animation_3.xml
+++ b/app/src/main/res/layout/flipper_animation_3.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- File created by SkillsOn -->
-<RelativeLayout
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/flipper_3">
+    android:background="@color/flipper_3"
+    android:weightSum="100">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/timeAnim"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_margin="32dp"
-        android:layout_above="@+id/text"/>
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/_55sdp"
+        android:layout_weight="60"/>
 
     <ScrollView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="0dp"
         android:layout_margin="16dp"
-        android:layout_above="@+id/next3">
+        android:layout_weight="28">
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/flipper_3_text"
             android:textColor="#FFF"
-            android:textSize="20sp"/>
+            android:textSize="@dimen/flipper_1_text" />
     </ScrollView>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/next3"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/_90sdp"
+        android:layout_height="0dp"
         app:lottie_fileName="next.json"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         android:layout_marginRight="@dimen/animation_button_margin2"
         android:layout_marginBottom="@dimen/animation_button_margin"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:padding="8dp"
+        android:layout_weight="12"
+        android:layout_gravity="right"
         android:background="@drawable/shape_flippers_next_button"/>
-</RelativeLayout>
+</LinearLayout>
