--- a/app/src/main/res/layout/flipper_animation_4.xml
+++ b/app/src/main/res/layout/flipper_animation_4.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- File created by SkillsOn -->
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/flipper_4">
+    android:orientation="vertical"
+    android:background="@color/flipper_4"
+    android:weightSum="10">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/eyeMovingAnim"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/text"
-        android:layout_margin="32dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="6"
+        android:layout_margin="@dimen/flipper_margin1"/>
 
     <ScrollView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="0dp"
         android:text="@string/flipper_4_text"
         android:layout_margin="16dp"
-        android:layout_above="@+id/gotIt"
-        android:layout_centerHorizontal="true"
-        android:background="#12858585">
+        android:background="#12858585"
+        android:layout_weight="2.8">
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
@@ -30,14 +30,13 @@
             android:text="@string/flipper_4_text"
             android:padding="8dp"
             android:textColor="@color/black"
-            android:textSize="20sp"/>
+            android:textSize="@dimen/_13sdp"/>
     </ScrollView>
 
     <Button
         android:id="@+id/gotIt"
-        android:layout_width="128dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="@dimen/animation_button_margin2"
+        android:layout_width="@dimen/_90sdp"
+        android:layout_height="0dp"
         android:background="@drawable/shape_flipper_4"
         android:text="@string/got_it"
         android:textColor="#FFF"
@@ -46,7 +45,8 @@
         android:textStyle="bold"
         android:typeface="monospace"
         android:textAllCaps="false"
+        android:layout_gravity="right"
+        android:layout_marginRight="@dimen/animation_button_margin2"
         android:layout_marginBottom="@dimen/animation_button_margin"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"/>
-</RelativeLayout>
+        android:layout_weight="1.2"/>
+</LinearLayout>
